2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp: Updated.
	* Project/NUnitAssemblyGroupFileFormat.cs: Track api changes.

2007-03-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp: Don't local copy references.
	* Services/NUnitService.cs, Gui/TestResultsPad.cs: Added button for
	  running the tests. Fixed context menu. Don't make the TestResultPad
	  a subclass of GuiSyncObject because there are some identity issue
	  with GetHashCode and the proxy. Using TestMonitor instead.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml: Change add-in versions to 0.13.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp: Set target runtime to 2.0.

2007-02-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Remove nunit references, since nunit is now included in
	  the add-in.

2007-02-11  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	*Makefile.am: install also nunit.framework.dll, otherwise addin will not start on some systems

2007-02-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp: Synchronized the MD project and the Makefile
	* MonoDevelopNUnit.addin.xml: Removed nunit dependency. Added new
	  project template.
	* Services/ExternalTestRunner.cs, Services/NUnitAssemblyTestSuite.cs:
	  Track api changes in NUnit.
	* Services/NUnitService.cs: Register the nunit package is none is
	  installed.
	* Gui/TestResultsPad.cs: Make the toolbar smaller. Added null check for
	  empty result messages when a test is ignored.
	* lib, lib/nunit.framework.dll, lib/nunit.core.dll: Bundle nunit
	  together with the add-in.
	* Makefile.am: Synchronized the MD project and the Makefile. Bundle
	  nunit together with the add-in.
	* templates/NUnitTestClass.xft.xml: Latest NUnit versions require the
	  Test attribute to be applied to test methods.
	* templates/NUnitProject.xpt.xml: New project template.

2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 
