@@ -1,3 +1,12 @@
+2007-05-03  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Projects/Combine.cs,
+	  MonoDevelop.Projects/CombineEntryEventArgs.cs,
+	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Added a
+	  Reloading property to the argument of the entry add/remove events
+	  of Combine, which is set to true if the entry is being only
+	  reloaded, not actually removed/added to the combine.
+
 2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.NUnit.mdp: Updated.
